--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   </head>
 <body>
   <div class="container">
-    <h1>Dewar Test</h1>
-    <div class="infoPanel"></div>
+    <h1>Kustodian Dewar Demo</h1>
     <div class="d3-panel">
-    <div class="breadcrumbs" ref="breadcrumbs"></div>
-    <div id="sunburst"></div>
-    </div>
+      <div id="breadcrumbs"></div>
+      <div id="sunburst"></div>
+    </div>    
+    <div id="info-panel"></div>
   </div>
   <script src="assets/js/d3/d3.min.js"></script>
   <script type="module" src="assets/js/index.js"></script>
